--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: center center;
-    background-image: url('../img/pc_main_visual.png');
+    background-image: url('https://github.com/yukusaki2/yukusaki2.github.io/blob/main/pc_main_visual.png?raw=true');
     /* background: linear-gradient(to bottom, transparent 0%, transparent 70%, #000 100%), url('../img/pc_main_visual.png'); */
     height: 769px;
 }
