--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* フォント指定 */
 body{
-    font-family: ‘小塚ゴシック Pr6N’,sans-serif;
+    font-family: 'ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro',sans-serif;
 }
 
 /* ヘッダー */
