--- a/style.css
+++ b/style.css
@@ -1095,6 +1095,7 @@ _:-ms-lang(x)::-ms-backdrop,
     /* コンタクト */
     .contact_img {
         width: 170px;
+        margin-right: 8px;
     }
 
     .contact_tel {
