--- a/style.css
+++ b/style.css
@@ -1160,6 +1160,10 @@ _:-ms-lang(x)::-ms-backdrop,
         font-size: 19px;
     }
     
+    .br-sp{
+        display: none;
+    }
+    
         
 }
 
